# nethugs

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/display/: ui.rs  ui_state.rs
src/display/components/: header_details.rs  mod.rs
src/display/components/snapshots/: bandwhich__display__components__display_bandwidth__tests__bandwidth_formatting.snap
src/network/: connection.rs  sniffer.rs  utilization.rs
src/os/: shared.rs
